--- a/app/src/main/res/layout/arlayout.xml
+++ b/app/src/main/res/layout/arlayout.xml
@@ -1,16 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <fragment
-        android:name="lt.lastweeknextday.cammask.CustomArFragment"
-        android:id="@+id/arFragment"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/sceneform_ux_fragment_layout"
-        android:tag="arFragment" />
+        android:fitsSystemWindows="true"
+        tools:context=".MainActivity">
 
-</FrameLayout>
+    <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/arFragment"
+            android:name="com.google.ar.sceneform.ux.ArFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    <View
+            android:id="@+id/flashOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:visibility="invisible"
+            android:elevation="999dp"/>
+
+    <RelativeLayout
+            android:id="@+id/controlsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_alignParentBottom="true"
+            android:padding="16dp"
+            android:elevation="1000dp">
+
+        <!-- Gallery Button -->
+        <ImageButton
+                android:id="@+id/galleryButton"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="32dp"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:background="@drawable/gallery_button_background"
+                android:contentDescription="@string/gallery_button_text" />
+
+        <!-- Capture Photo Button -->
+        <ImageButton
+                android:id="@+id/capturePhotoButton"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/capture_button_background"
+                android:contentDescription="@string/photo_button_text" />
+
+        <!-- Record Video Button -->
+        <ImageButton
+                android:id="@+id/captureVideoButton"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="32dp"
+                android:layout_toEndOf="@id/capturePhotoButton"
+                android:background="@drawable/video_button_background"
+                android:contentDescription="@string/video_button_text" />
+
+    </RelativeLayout>
+</RelativeLayout>
