--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -102,7 +102,17 @@
                 android:id="@+id/uploadButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Upload" />
+                android:text="Upload"
+                android:visibility="gone" />
+
+        <com.google.android.gms.common.SignInButton
+                android:id="@+id/loginButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Login with Google"
+                android:layout_margin="10dp"
+                android:textSize="18sp"
+                android:visibility="visible"/>
 
     </LinearLayout>
 </ScrollView>
