--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -105,14 +105,27 @@
                 android:text="Upload"
                 android:visibility="gone" />
 
-        <com.google.android.gms.common.SignInButton
-                android:id="@+id/loginButton"
+        <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Login with Google"
-                android:layout_margin="10dp"
-                android:textSize="18sp"
-                android:visibility="visible"/>
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
 
+            <com.google.android.gms.common.SignInButton
+                    android:id="@+id/loginButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Login with Google"
+                    android:layout_margin="10dp"
+                    android:textSize="18sp"
+                    android:visibility="visible"/>
+
+            <ProgressBar
+                    android:id="@+id/loginProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+        </FrameLayout>
     </LinearLayout>
 </ScrollView>
