--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -7,41 +8,66 @@
         android:background="@drawable/comment_input_background">
 
     <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-        <ImageView
-                android:id="@+id/userImage"
-                android:layout_width="48dp"
-                android:layout_height="48dp" />
-
-        <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textSize="12sp" />
-    </LinearLayout>
-
-    <LinearLayout
+            android:id="@+id/commentContainer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="8dp">
+            android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/commentDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="#80000000" />
+        <FrameLayout
+                android:layout_height="match_parent"
+                android:layout_width="match_parent">
 
-        <TextView
-                android:id="@+id/commentText"
-                android:layout_width="match_parent"
-                android:layout_height="47dp"
-                android:layout_marginTop="4dp" />
+            <LinearLayout
+                    android:id="@+id/commentContainerContents"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                    <ImageView
+                            android:id="@+id/userImage"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp" />
+
+                    <TextView
+                            android:id="@+id/userName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="4dp"
+                            android:textSize="12sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginStart="8dp">
+
+                    <TextView
+                            android:id="@+id/commentDate"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="12sp"
+                            android:textColor="#80000000" />
+
+                    <TextView
+                            android:id="@+id/commentText"
+                            android:layout_width="match_parent"
+                            android:layout_height="47dp"
+                            android:layout_marginTop="4dp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <ProgressBar
+                    android:id="@+id/commentProgress"
+                    android:layout_width="478dp"
+                    android:layout_height="54dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
+        </FrameLayout>
     </LinearLayout>
 </LinearLayout>
