Add tags to mask activity

--- a/app/src/main/res/layout/activity_mask.xml
+++ b/app/src/main/res/layout/activity_mask.xml
@@ -64,11 +64,18 @@
                     android:layout_marginStart="8dp" />
         </LinearLayout>
 
+        <TextView
+                android:id="@+id/tagTextMain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:textSize="16sp" />
+
         <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/imageCarousel"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="16dp" />
 
         <TextView
                 android:id="@+id/maskDescription"
