--- a/app/src/main/res/layout/activity_mask.xml
+++ b/app/src/main/res/layout/activity_mask.xml
@@ -77,12 +77,40 @@
                 android:layout_height="200dp"
                 android:layout_marginBottom="16dp" />
 
-        <TextView
-                android:id="@+id/maskDescription"
+        <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginBottom="16dp"/>
+                android:layout_height="match_parent">
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                <ImageView
+                        android:id="@+id/userImageUploader"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp" />
+
+                <TextView
+                        android:id="@+id/userNameUploader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:textSize="12sp"
+                        android:textAlignment="center" />
+            </LinearLayout>
+
+            <TextView
+                    android:id="@+id/maskDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="24dp" />
+
+        </LinearLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
