--- a/app/src/main/res/layout/slide_menu.xml
+++ b/app/src/main/res/layout/slide_menu.xml
@@ -60,23 +60,23 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_horizontal">
-
-            <Button
-                    android:id="@+id/testButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Test" />
+                android:orientation="vertical"
+                android:gravity="center">
 
             <Button
                     android:id="@+id/uploadButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Upload"
                     android:layout_marginBottom="8dp"
                     android:scaleX="1"
                     android:scaleY="1" />
+
+            <Button
+                    android:id="@+id/testButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Test" />
 
         </LinearLayout>
 
