--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -10,7 +10,8 @@
     <LinearLayout
             android:id="@+id/commentContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <FrameLayout
                 android:layout_height="match_parent"
@@ -68,6 +69,16 @@
                     android:layout_height="54dp"
                     android:layout_gravity="center"
                     android:visibility="gone" />
+
+            <ImageButton
+                    android:id="@+id/reportButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="top|end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@android:drawable/ic_dialog_alert"
+                    android:contentDescription="Report comment" />
         </FrameLayout>
+
     </LinearLayout>
 </LinearLayout>
