--- a/app/src/main/res/layout/activity_mask.xml
+++ b/app/src/main/res/layout/activity_mask.xml
@@ -24,6 +24,11 @@
                     android:textStyle="bold"
                     android:layout_marginBottom="8dp" />
 
+            <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
             <ImageButton
                     android:id="@+id/reportMaskButton"
                     android:layout_width="55dp"
