--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -98,12 +98,26 @@
                     android:minLines="3" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-                android:id="@+id/uploadButton"
+        <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Upload"
-                android:visibility="gone" />
+                android:layout_margin="10dp">
+
+            <Button
+                    android:id="@+id/uploadButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Upload"
+                    android:visibility="gone" />
+
+            <ProgressBar
+                    android:id="@+id/uploadProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"/>
+
+        </FrameLayout>
 
         <FrameLayout
                 android:layout_width="match_parent"
